--- a/NextEpisode/UI/Episode Detail View/Episode.storyboard
+++ b/NextEpisode/UI/Episode Detail View/Episode.storyboard
@@ -14,72 +14,66 @@
                         <viewControllerLayoutGuide type="bottom" id="V7u-6r-TVV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="sAz-qz-Dgn">
-                        <rect key="frame" x="0.0" y="64" width="600" height="586"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="516"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbe-Rd-ysT">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="586"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbe-Rd-ysT">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="508"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Vw-zh-SKv">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="523"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="496"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l2w-zO-bDE">
-                                                <rect key="frame" x="8" y="12" width="584" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bc0-nA-HwO">
-                                                <rect key="frame" x="8" y="49" width="584" height="224"/>
+                                                <rect key="frame" x="8" y="40" width="584" height="224"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="224" id="Tnt-kV-OXZ"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZx-rZ-pFv">
-                                                <rect key="frame" x="8" y="317" width="584" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="8" y="305" width="584" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ikT-Um-Cfe">
-                                                <rect key="frame" x="8" y="346" width="584" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="8" y="331" width="584" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wU-nb-yKp">
-                                                <rect key="frame" x="8" y="375" width="584" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="8" y="357" width="584" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Airtime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G3R-W3-Ib6">
-                                                <rect key="frame" x="8" y="404" width="584" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="8" y="383" width="584" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AirDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wpo-eA-HEu">
-                                                <rect key="frame" x="8" y="433" width="584" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="8" y="409" width="584" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="prT-tL-AG1">
-                                                <rect key="frame" x="8" y="281" width="584" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="8" y="272" width="584" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URI-wf-JyN">
-                                                <rect key="frame" x="0.0" y="462" width="600" height="1"/>
+                                                <rect key="frame" x="0.0" y="435" width="600" height="1"/>
                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="0.29934064719999998" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="oHS-7q-Go4"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oFb-QQ-6GU">
-                                                <rect key="frame" x="0.0" y="463" width="600" height="60"/>
+                                                <rect key="frame" x="0.0" y="436" width="600" height="60"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3dZ-a4-EeX">
                                                         <rect key="frame" x="20" y="12" width="560" height="40"/>
@@ -106,9 +100,9 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="l2w-zO-bDE" firstAttribute="leading" secondItem="8Vw-zh-SKv" secondAttribute="leading" constant="8" id="2dD-4j-ipc"/>
                                             <constraint firstAttribute="trailing" secondItem="aZx-rZ-pFv" secondAttribute="trailing" constant="8" id="4bz-LJ-J26"/>
                                             <constraint firstAttribute="trailing" secondItem="prT-tL-AG1" secondAttribute="trailing" constant="8" id="6hc-ik-h67"/>
+                                            <constraint firstItem="bc0-nA-HwO" firstAttribute="top" secondItem="8Vw-zh-SKv" secondAttribute="top" constant="40" id="8ws-aV-n2B"/>
                                             <constraint firstItem="URI-wf-JyN" firstAttribute="leading" secondItem="8Vw-zh-SKv" secondAttribute="leading" id="DTg-4v-w8h"/>
                                             <constraint firstItem="4wU-nb-yKp" firstAttribute="top" secondItem="ikT-Um-Cfe" secondAttribute="bottom" constant="8" id="GBL-Dk-E5I"/>
                                             <constraint firstItem="prT-tL-AG1" firstAttribute="top" secondItem="bc0-nA-HwO" secondAttribute="bottom" constant="8" id="IXM-MW-9za"/>
@@ -121,9 +115,7 @@
                                             <constraint firstItem="G3R-W3-Ib6" firstAttribute="leading" secondItem="8Vw-zh-SKv" secondAttribute="leading" constant="8" id="XHJ-XT-Tnx"/>
                                             <constraint firstItem="aZx-rZ-pFv" firstAttribute="leading" secondItem="8Vw-zh-SKv" secondAttribute="leading" constant="8" id="Xuc-4Q-Zdd"/>
                                             <constraint firstAttribute="trailing" secondItem="Wpo-eA-HEu" secondAttribute="trailing" constant="8" id="YCD-Ji-PNC"/>
-                                            <constraint firstAttribute="trailing" secondItem="l2w-zO-bDE" secondAttribute="trailing" constant="8" id="b2h-hO-UsP"/>
                                             <constraint firstItem="G3R-W3-Ib6" firstAttribute="top" secondItem="4wU-nb-yKp" secondAttribute="bottom" constant="8" id="fCU-6m-Y7L"/>
-                                            <constraint firstItem="bc0-nA-HwO" firstAttribute="top" secondItem="l2w-zO-bDE" secondAttribute="bottom" constant="13" id="fk9-PR-kkv"/>
                                             <constraint firstAttribute="trailing" secondItem="URI-wf-JyN" secondAttribute="trailing" id="ga3-az-Mu2"/>
                                             <constraint firstItem="Wpo-eA-HEu" firstAttribute="top" secondItem="G3R-W3-Ib6" secondAttribute="bottom" constant="8" id="j18-RN-awm"/>
                                             <constraint firstItem="4wU-nb-yKp" firstAttribute="leading" secondItem="8Vw-zh-SKv" secondAttribute="leading" constant="8" id="js2-k8-qgW"/>
@@ -133,7 +125,6 @@
                                             <constraint firstItem="bc0-nA-HwO" firstAttribute="leading" secondItem="8Vw-zh-SKv" secondAttribute="leading" constant="8" id="o6Z-9d-rYv"/>
                                             <constraint firstItem="ikT-Um-Cfe" firstAttribute="top" secondItem="aZx-rZ-pFv" secondAttribute="bottom" constant="8" id="onI-ZS-2G4"/>
                                             <constraint firstItem="URI-wf-JyN" firstAttribute="top" secondItem="Wpo-eA-HEu" secondAttribute="bottom" constant="8" id="uft-QF-ULD"/>
-                                            <constraint firstItem="l2w-zO-bDE" firstAttribute="top" secondItem="8Vw-zh-SKv" secondAttribute="top" constant="12" id="v5T-UL-tUD"/>
                                             <constraint firstAttribute="trailing" secondItem="4wU-nb-yKp" secondAttribute="trailing" constant="8" id="yQI-xx-Jwq"/>
                                             <constraint firstItem="oFb-QQ-6GU" firstAttribute="top" secondItem="URI-wf-JyN" secondAttribute="bottom" id="yRw-UM-5Yg"/>
                                             <constraint firstAttribute="trailing" secondItem="oFb-QQ-6GU" secondAttribute="trailing" id="yxH-Or-mhh"/>
@@ -159,7 +150,7 @@
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="600" height="650"/>
+                    <size key="freeformSize" width="600" height="580"/>
                     <connections>
                         <outlet property="airDateLabel" destination="Wpo-eA-HEu" id="3mg-iO-8kM"/>
                         <outlet property="airtimeLabel" destination="G3R-W3-Ib6" id="VVc-Mj-Qsu"/>
@@ -168,7 +159,6 @@
                         <outlet property="imageView" destination="bc0-nA-HwO" id="l1L-QL-A9d"/>
                         <outlet property="ratingLabel" destination="4wU-nb-yKp" id="qG4-BS-DJK"/>
                         <outlet property="smmaryLabel" destination="prT-tL-AG1" id="8sx-F3-sZF"/>
-                        <outlet property="titleLabel" destination="l2w-zO-bDE" id="SwO-Mo-Na3"/>
                         <outlet property="watchButton" destination="3dZ-a4-EeX" id="7TD-9I-FGU"/>
                     </connections>
                 </viewController>
